# wingman

./: .gitignore  .gitmodules  .prettierrc.yaml  CONTRIBUTING.md  README.md  build-setup.ps1  build.ps1  convert-png-to-icons.ps1  index.html  license  make-download-table.ps1  notes.md  package-lock.json  package.json  run  run.bat  update-readme-download-links.ps1  vcpkg-list-linux.json  vcpkg-list-macos.json  vcpkg-list-to-json.ps1  vcpkg-list-windows.json  vcpkg-list.json  vcpkg.patch  wingman.css
.github/: update_links.yaml
.github/workflows/: archiver.yaml  builder.yaml  publish.yaml  wingman-app-build-and-release.yaml  wingman-update-release-notes.yaml  wingman.backend.yaml  wingman.yaml
assets/images/: rooster.psd
eval-data/: results.csv  script.js
service/: .editorconfig  CMakeLists.txt  CMakePresets.json  curl.hpp  download.server.hpp  notes.md  on_exit.h  orm.hpp  prompt.md  types.h  util.hpp  wingman.cpp  wingman.download.cpp
service/include/: curl.h  download.service.h  orm.h  types.h  util.hpp
service/libsrc/: curl.cpp  download.service.cpp  on_exit.cpp  orm.cpp
service/tests/: CMakeLists.txt  models.json  models.raw.json  orm-app.cpp  orm-download.cpp  orm-wingman.cpp  orm.appitem.cpp  orm.download.cpp  orm.wingman.cpp
service/tools/: CMakeLists.txt  tool.dump.download.cpp  tool.get.download.cpp  tool.get.downloads.cpp  tool.insert.download.cpp  tool.listavailable.downloads.cpp  tool.run.downloadservice.cpp  tool.test.cpp  tool.tests.cpp
ux/: .env.local.example  .gitignore  .prettierrc  Makefile  README.md  build-ux-ci.ps1  docker-compose.yml  error.html  forge.config.js  index.html  main.js  next.config.js  package-lock.json  package.json  preload.js  prettier.config.js  release.config.js  tailwind.config.js  thebloke.json  tsconfig.json  tsconfig.wingman.json  utils.js
ux/.github/workflows/: push-to-registry.yaml
ux/assets/: logo-black-white.icns  logo-black-white@2x.icns  logo-color.icns  logo-rooster-black-white.icns  logo-rooster-black-white@2x.icns  logo-rooster.psd  w-logo.psd  wingman-goggles.psd
ux/components/: AppContextProvider.tsx  CombineComponents.tsx
ux/components/Chat/: ActiveDownloadView.tsx  CancelDownloadButton.tsx  Chat.tsx  ChatAlert.tsx  ChatInput.tsx  ChatLoader.tsx  ChatMessage.tsx  ChatSettings.tsx  ChatSettingsDialog.tsx  ChatSettingsModal.tsx  ChatStatus.tsx  DeleteDownloadButton.tsx  DownloadButton.tsx  DownloadMetrics.tsx  ErrorMessageDiv.tsx  InitialModelListing.tsx  MemoizedChatMessage.tsx  ModelListing.tsx  ModelSelect.tsx  PluginSelect.tsx  PromptList.tsx  RedownloadButton.tsx  Regenerate.tsx  SelectModel.tsx  SelectedConversationModelStatus.tsx  SystemPrompt.tsx  Temperature.tsx  Util.tsx  VariableModal.tsx  WingmanChart.tsx  WingmanDownloadStatus.tsx  WingmanInferenceStatus.tsx  WingmanRenderBox.tsx  WingmanStatus.tsx
ux/components/Chatbar/: Chatbar.context.tsx  Chatbar.state.tsx  Chatbar.tsx
ux/components/Folder/: Folder.tsx  index.ts
ux/components/Markdown/: CodeBlock.tsx  MemoizedReactMarkdown.tsx
ux/components/Mobile/: Navbar.tsx
ux/components/Promptbar/: PromptBar.context.tsx  Promptbar.state.tsx  Promptbar.tsx  index.ts
ux/components/Search/: Search.tsx
ux/components/Settings/: HostAddress.tsx  Import.tsx  Key.tsx  SettingDialog.tsx  SettingInput.tsx
ux/components/Sidebar/: Sidebar.tsx  SidebarButton.tsx
ux/components/Spinner/: Spinner.tsx
ux/docs/: google_search.md
ux/hooks/: useCreateReducer.ts  useFetch.ts  useMemoizedState.ts  useRequestDownloadAction.ts  useRequestInferenceAction.ts  useWingman.ts
ux/k8s/: chatbot-ui.yaml
ux/nv/: CMakeLists.txt  cublas_list_gpus.cpp  cublas_test.cpp
ux/pages/: _app.tsx  _document.tsx  index.tsx
ux/pages/api/: chat.ts  download.ts  google.ts  inference.ts  models.ts  settings.ts
ux/pages/api/home/: home.context.tsx  (+5 more)
ux/server/: index.ts
ux/server/wingman/: index.ts  wingman.local.ts
ux/services/: errorService.ts  useApiService.ts
ux/styles/: globals.css  react-select.css
ux/tron/: index.html  log-display.html  logViewer.js  main.js  menu.js  preload.js
ux/types/: ai.ts  chat.ts  download.ts  env.ts  error.ts  export.ts  folder.ts  google.ts  plugin.ts  prompt.ts  settings.ts  storage.ts  wingman.ts
ux/utils/: logger.winston.ts
ux/utils/app/: api.ts  clean.ts  codeblock.ts  const.ts  folders.ts  importExport.ts  prompts.ts  settings.ts
ux/utils/data/: throttle.ts
ux/utils/server/: download.huggingface.ts  google.ts  index.ts  orm.ts  progressTrackerUtility.ts  settings.Fs.ts  settings.Sqlite.ts
ux_proto/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  prompts  tailwind.config.ts  timing_metrics.json  tsconfig.download-monitor-cli.json  tsconfig.download-server.json  tsconfig.json  tsconfig.node-server.json  tsconfig.server.json
ux_proto/components/: CancelDownloadButton.tsx  DeleteDownloadButton.tsx  DownloadButton.tsx  DownloadMetrics.tsx  ModelSelect.tsx  RedownloadButton.tsx  SelectModel.tsx  WingmanChart.tsx  WingmanRenderBox.tsx
ux_proto/hooks/: backendServerSocket.ts  useCreateReducer.ts  useDownloadServer.socketio.ts  useDownloadServer.ts  useDownloadServer.useWebSocket.ts  useDownloadService.ts  useFetch.ts  useMousePosition.ts  useRequestDownloadAction.ts  useWingman.ts  useWingmanInference.ts  useWingmanServer.socketio.ts  useWingmanServer.ts  useWingmanService.ts  wingmanServerSocket.ts
ux_proto/pages/: _app.tsx  _document.tsx  index copy.tsx  index-minimal.tsx  index.tsx  index.ws-test.tsx
ux_proto/pages/api/: download.ts  models.ts  status.ts  wingman.ts
ux_proto/prompts/: prompts
ux_proto/server/: index.ts
ux_proto/server/download/: download.huggingface.ts  index.ts
ux_proto/server/wingman/: index.ts  wingman.local.ts
ux_proto/services/: useApiService.ts
ux_proto/styles/: globals.css
ux_proto/types/: ai.ts  download.ts  llama_stats.ts  wingman.ts
ux_proto/utils/: gpuInfo.js  logger.stdout.ts  logger.winston.ts  pathInfo.js  resetGpu.ps1
ux_proto/utils/app/: const.ts  conversation.ts
ux_proto/utils/server/: fs.download.ts  orm.Sqlite.object.ts  orm.ts
(+22 files in other folders)
