function(wingman_build_tool source)
    get_filename_component(TOOL_TARGET ${source} NAME_WLE)
    add_executable(${TOOL_TARGET} ${source} ${SHARED_SOURCES})
    target_include_directories(${TOOL_TARGET} PRIVATE ${SHARED_HEADERS})
    set_property(TARGET ${TOOL_TARGET} PROPERTY CXX_STANDARD 20)
    install(TARGETS ${TOOL_TARGET} RUNTIME)
    target_link_libraries(${TOOL_TARGET} PRIVATE ${${DOWNLOAD_TARGET}_link_libraries})
    if(WIN32)
        target_link_libraries(${TOOL_TARGET} PRIVATE ws2_32)
    endif()
    #target_compile_features(${TOOL_TARGET} PRIVATE cxx_std_11)
    if(TARGET BUILD_INFO)
        add_dependencies(${DOWNLOAD_TARGET} BUILD_INFO)
    endif()
endfunction()

# run `wingman_build_tool` for each tool in the tools directory
file(GLOB tools RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} tool.*.cpp)
foreach(tool ${tools})
	wingman_build_tool(${tool})
endforeach()
#wingman_build_tool(tool.insert.download.cpp)
#wingman_build_tool(tool.listavailable.downloads.cpp)
